welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:18: error: not found: value i
	return a(i);
                 ^